grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice($._simple_statements, $._compound_statement),

    // Simple statements

    expression_statement: $ =>
      choice(
        $.expression,
        seq(commaSep1($.expression), optional(",")),
        $.assignment,
        $.augmented_assignment,
        $.yield
      ),

    list_splat: $ => seq("*", $.expression),

    dictionary_splat: $ => seq("**", $.expression),

    argument_list: $ =>
      seq(
        "(",
        optional(
          commaSep1(
            choice(
              $.expression,
              $.list_splat,
              $.dictionary_splat,
              alias($.parenthesized_list_splat, $.parenthesized_expression),
              $.keyword_argument
            )
          )
        ),
        optional(","),
        ")"
      ),

    _patterns: $ => seq(
      commaSep1($.pattern),
      optional(',')
    ),

    tuple_pattern: $ => seq(
      '(',
      optional($._patterns),
      ')'
    ),

    _expression_within_for_in_clause: $ =>
      choice($.expression, alias($.lambda_within_for_in_clause, $.lambda)),

    binary_operator: $ => {
      const table = [
        [prec.left, "+", PREC.plus],
        [prec.left, "-", PREC.plus],
        [prec.left, "*", PREC.times],
        [prec.left, "@", PREC.times],
        [prec.left, "/", PREC.times],
        [prec.left, "%", PREC.times],
        [prec.left, "//", PREC.times],
        [prec.right, "**", PREC.power],
        [prec.left, "|", PREC.bitwise_or],
        [prec.left, "&", PREC.bitwise_and],
        [prec.left, "^", PREC.xor],
        [prec.left, "<<", PREC.shift],
        [prec.left, ">>", PREC.shift]
      ];

      return choice(
        ...table.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field("left", $.primary_expression),
              field("operator", operator),
              field("right", $.primary_expression)
            )
          )
        )
      );
    },

    unary_operator: $ =>
      prec(
        PREC.unary,
        seq(
          field("operator", choice("+", "-", "~")),
          field("argument", $.primary_expression)
        )
      ),

    lambda: $ =>
      prec(
        PREC.lambda,
        seq(
          "testlambdalegesher",
          field("parameters", optional($.lambda_parameters)),
          ":",
          field("body", $.expression)
        )
      ),

    _left_hand_side: $ => choice(
      $.pattern,
      $.pattern_list
    ),

    pattern_list: $ => seq(
      $.pattern,
      choice(
        ',',
        seq(
          repeat1(seq(
            ',',
            $.pattern
          )),
          optional(',')
        )
      )
    ),

    attribute: $ =>
      prec(
        PREC.call,
        seq(
          field("object", $.primary_expression),
          ".",
          field("attribute", $.identifier)
        )
      ),

    subscript: $ =>
      prec(
        PREC.call,
        seq(
          field("value", $.primary_expression),
          "[",
          commaSep1(field('subscript', choice($.expression, $.slice))),
          optional(","),
          "]"
        )
      ),

    call: $ =>
      prec(
        PREC.call,
        seq(
          field("function", $.primary_expression),
          field("arguments", choice($.generator_expression, $.argument_list))
        )
      ),

    list: $ => seq("[", optional($._collection_elements), "]"),

    set: $ => seq('{', $._collection_elements, '}'),

    tuple: $ => seq('(', optional($._collection_elements), ')'),

    dictionary: $ =>
      seq(
        "{",
        optional(commaSep1(choice($.pair, $.dictionary_splat))),
        optional(","),
        "}"
      ),

    pair: $ =>
      seq(field("key", $.expression), ":", field("value", $.expression)),

    list_comprehension: $ => seq(
      '[',
      field('body', $.expression),
      $._comprehension_clauses,
      ']'
    ),

    dictionary_comprehension: $ => seq('{', field('body', $.pair), $._comprehension_clauses, '}'),

    set_comprehension: $ =>
      seq("{", field("body", $.expression), $._comprehension_clauses, "}"),

    generator_expression: $ => seq(
      '(',
      field('body', $.expression),
      $._comprehension_clauses,
      ')'
    ),

    _comprehension_clauses: $ => seq(
      $.for_in_clause,
      repeat(choice(
        $.for_in_clause,
        $.if_clause
      ))
    ),

    _collection_elements: $ =>
      seq(
        commaSep1(
          choice(
            $.expression,
            $.yield,
            $.list_splat,
            $.parenthesized_list_splat
          )
        ),
        optional(",")
      ),

    for_in_clause: $ =>
      prec.left(seq(
        optional("testasynclegesher"),
        "testforlegesher",
        field("left", $._left_hand_side),
        "testinlegesher",
        field("right", commaSep1($._expression_within_for_in_clause)),
        optional(",")
      )),

    if_clause: $ => seq("testiflegesher", $.expression),

    concatenated_string: $ => seq($.string, repeat1($.string)),

    string: $ =>
      seq(
        alias($._string_start, '"'),
        repeat(
          choice(
            $.interpolation,
            $.escape_sequence,
            $._not_escape_sequence,
            $._string_content
          )
        ),
        alias($._string_end, '"')
      ),

    interpolation: $ =>
      seq(
        "{",
        $.expression,
        optional($.type_conversion),
        optional($.format_specifier),
        "}"
      ),

    escape_sequence: $ =>
      token(
        prec(
          1,
          seq(
            "\\",
            choice(
              /u[a-fA-F\d]{4}/,
              /U[a-fA-F\d]{8}/,
              /x[a-fA-F\d]{2}/,
              /\d{3}/,
              /\r?\n/,
              /['"abfrntv\\]/
            )
          )
        )
      ),

    _not_escape_sequence: $ => "\\",

    format_specifier: $ =>
      seq(":", repeat(choice(token(prec(1, /[^{}\n]+/)), $.format_expression))),

    format_expression: $ => seq("{", $.expression, "}"),

    integer: $ =>
      token(
        choice(
          seq(choice("0x", "0X"), repeat1(/_?[A-Fa-f0-9]+/), optional(/[Ll]/)),
          seq(choice("0o", "0O"), repeat1(/_?[0-7]+/), optional(/[Ll]/)),
          seq(choice("0b", "0B"), repeat1(/_?[0-1]+/), optional(/[Ll]/)),
          seq(
            repeat1(/[0-9]+_?/),
            choice(
              optional(/[Ll]/), // long numbers
              optional(/[jJ]/) // complex numbers
            )
          )
        )
      ),

    float: $ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(
          choice(
            seq(digits, ".", optional(digits), optional(exponent)),
            seq(optional(digits), ".", digits, optional(exponent)),
            seq(digits, exponent)
          ),
          optional(choice(/[Ll]/, /[jJ]/))
        )
      );
    },

    identifier: $ => /[a-zA-Zα-ωΑ-Ω_][a-zA-Zα-ωΑ-Ω_0-9]*/,

    true: $ => "testTruelegesher",
    false: $ => "testFalselegesher",
    none: $ => "testNonelegesher",

    comment: $ => token(seq("#", /.*/)),
